Added user guide on website

--- a/WebApp/client/src/App.css
+++ b/WebApp/client/src/App.css
@@ -94,6 +94,10 @@ body {
   margin-right: 4px;
 }
 
+.download a {
+  text-decoration: none;
+}
+
 .searchPlayer {
   display: flex;
   justify-content: center;
